--- a/REVISTA URBAN CENTER 2017/REVISTA PRESIDENTE/css/style.css
+++ b/REVISTA URBAN CENTER 2017/REVISTA PRESIDENTE/css/style.css
@@ -10,8 +10,13 @@ h3{
 }
 
 .container{
-  width: 100%;
-  height: 100%;
+  margin-top: 200px;
+  width: 45%;
+  height: 45%;
+}
+
+.container2{
+  margin-top: -150px;
 }
 
 ul > li{
@@ -28,7 +33,7 @@ ul{
 }
 
 .navbar{
-  margin-top: 40px;
+  margin-top: 0px;
   margin-left: 50px;
   position: fixed;
   z-index: 5000;
@@ -50,4 +55,8 @@ button{
   text-decoration: none;
   border: none;
   font-family: "Verdana", "Open Sans", "Helvetica", sans-serif; 
+}
+
+.carousel-indicators{
+  color: #000;
 }
