--- a/REVISTA URBAN CENTER 2017/REVISTA CORONA/css/style.css
+++ b/REVISTA URBAN CENTER 2017/REVISTA CORONA/css/style.css
@@ -10,8 +10,13 @@ h3{
 }
 
 .container{
+  margin-top: 0px;
   width: 100%;
   height: 100%;
+}
+
+.container2{
+  margin-top: 50px;
 }
 
 ul > li{
@@ -28,7 +33,7 @@ ul{
 }
 
 .navbar{
-  margin-top: 40px;
+  margin-top: 0px;
   margin-left: 50px;
   position: fixed;
   z-index: 5000;
@@ -50,4 +55,8 @@ button{
   text-decoration: none;
   border: none;
   font-family: "Verdana", "Open Sans", "Helvetica", sans-serif; 
+}
+
+.carousel-indicators{
+  color: #000;
 }
