--- a/REVISTA URBAN CENTER 2017/REVISTA STELLA/css/style.css
+++ b/REVISTA URBAN CENTER 2017/REVISTA STELLA/css/style.css
@@ -60,3 +60,47 @@ button{
 .carousel-indicators{
   color: #000;
 }
+
+@media (max-width: 1200px){
+  .container2{
+    width: 150px;
+    height: 50px;
+  }
+
+  ul > li > img{
+    width: 50px;
+  }
+}
+
+@media (max-width: 1000px){
+  .container2{
+    width: 150px;
+    height: 50px;
+  }
+
+  ul > li > img{
+    width: 50px;
+  }
+}
+
+@media (max-width: 780px){
+  .container2{
+    width: 150px;
+    height: 50px;
+  }
+
+  ul > li > img{
+    width: 50px;
+  }
+}
+
+@media (max-width: 400px){
+  .container2{
+    width: 150px;
+    height: 50px;
+  }
+
+  ul > li > img{
+    width: 50px;
+  }
+}
